--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@mui/material": "^6.0.2",
         "@mui/styled-engine-sc": "^6.0.2",
         "dayjs": "^1.11.13",
+        "recharts": "^2.13.3",
         "styled-components": "^6.1.13",
         "uuid": "^10.0.0"
     }
