--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=base64:rzbSEzNm+zJjuFl4fP5JFufXFr7IjPz/3QVSZr9eF1Y=
 APP_DEBUG=false
 APP_TIMEZONE=Asia/Manila
-APP_URL=http://www.atudm.icu/udinem/ 
+APP_URL=https://www.atudm.icu/udinem/ 
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
