--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@mui/material": "^6.0.2",
         "@mui/styled-engine-sc": "^6.0.2",
         "dayjs": "^1.11.13",
+        "jspdf": "^2.5.2",
+        "jspdf-autotable": "^3.8.4",
         "recharts": "^2.13.3",
         "styled-components": "^6.1.13",
         "uuid": "^10.0.0"
